worked on limitations and future studies

--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -32,7 +32,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Discussion
 
 ## Overall findings
-The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma proteome and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings). 
+The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings). 
 
 ```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored. Figure made using BioRender.com.", fig.scap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers"}
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
@@ -53,32 +53,29 @@ column_spec(2, width = "12cm") %>%
   landscape()
 ```
 
-This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here there was no evidence for an effect of BMI on platelet function, however alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
+This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here there was no evidence for an effect of BMI on platelet function, however alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
 
-## Strengths and limitations
-This thesis has approached hypotheses using a wide range of techniques. These have helped 
-
-- Combination of approaches. Strengthening understanding of mechanisms of obesity. Comment of the general benefit of having developed skills in both epidemiology and basic science?
+## Strengths 
+As previously mentioned, thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. This is therefore a strength of the current research.
 
 ## Limitations
-The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored due to the availability of appropriate data or the ability to carry out experiments. There are other steps within the pathway that need to be assessed to try to further characterise this pathway. For example xx, xx and xx.
+The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored where there was available data or where it was possible to address hypotheses with specifically designed basic science experiments. Certain analyses were limited by the availability of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants [@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
 
-## Wider implications of findings (e.g. clinical)
-- IPC should be considered when prescribing antiplatelet medication, especially in those with higher BMI.
-- As various proteins altered by BMI have been implicated in disease, could a combination of biomarkers/profile effect be used to determine patients at greatest risk of a thrombotic event. Reference Andrei's paper (needs to be added to MedRxiV) with BMI protein to DVT section.
+As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the sample size for the bariatric patient platelet study. The sample size (N=4) has limited power to detect associations, especially in experiments which have more variability. Before the COVID-19 pandemic, the plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would allow exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function [@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss [@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. 
+
+## Wider implications of findings
+The research has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC. Similarly, some more detailed blood counts from newer haematology analyzers do not provide IPC within the summary, however this can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to treatment [@Bernlochner2015a].
+
+As well as IPC having the potential to be a useful biomarker, various plasma proteins could also be biomarkers for patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter x and x have been implicated in disease. For example, in work by Constantinescu et al., their analysis suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC (Reference Andrei's paper). Proteins such as INHBC could therefore be therapeutic targets. These proteins could also be potential biomarkers. Further work on protein profiles is required, as it is more likely a change in various proteins mediates the risk. 
  
 ## Future studies
-Based on the findings of the thesis, there are various areas which require further exploration.
+Based on the findings of the research, there have been more questions which have been raised and would require further research. These will be discussed in the following paragraphs.
 
-Chapter 4
-- Replicate BMI and IPC association in another large cohort. 
-- Need to be summary stats for larger cohorts with platelet function to do two sample MR for BMI to platelet function.
+The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided causal evidence for higher BMI raising IPC. There was also a positive association between BMI and IPC within the cardiac surgery cohort and although the magnitude of estimate was the same, this effect was weak, potentially attributable to the modest sample size. It would be beneficial to validate this association within an independent cohort, such as UK Biobank. It would be useful to link IPC to medical records to be able to look at whether IPC is a predictor of cardiovascular events such as myocardial infarction or stroke. Mendelian randomization could also be implemented to look at the causal effect of IPC on cardiovascular outcomes. Once summary statistics become available for a GWAS of platelet function, with more participants, it would also be beneficial to do an MR analysis to explore the causal role of IPC in platelet function.
 
-Chapter 5
-- Follow up immature platelets from patients with obesity as not much is understood about their function
-- Look up proteins which came up in proteomics in two sample MR? E.g. APMAP implemented in MI.
-- Complete the longitudinal study - repeated measures before and after surgery could be informative.
+Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as The stratification of obese phenotypes to optimize future obesity therapy (SOPHIA) study would likely have the relevant variables to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets [@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs) [@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be both labour intensive to perform proteomics on thousands of people's platelets computationally intensive to perform GWAS for thousands of proteins.
 
+The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter xx, with
 Chapter 6
 - Further signaling and functional work required.
 - These chemokines were measured within Chapter 7 - there was evidence for an association between BMI and MDC, and weak evidence for a causal effect (p=0.07). This did not pass multiple testing correction. It would be beneficial to look at these chemokines in other cohorts. In the DiRECT analysis, there was weak evidence that a reduction in weight reduces levels of MDC (p=0.06). Again, this did not pass multiple testing. The agreement in direction across the two studies (raised with higher BMI and reduced with weight loss), suggests that this effect could be real, however it may be a relatively small effect which may require more targeted proteomics. The effects were smaller for TARC, suggesting that if these effects are real, body mass index has a larger effect on MDC levels.
